# aisay

./: .gitignore  README.md  pyproject.toml
aisay/: __init__.py  app.py  biz.py  bots.py  chatbot.py  conf.py  db.py  init_db.py
corpus/: ai_education_sales_data.txt
prompt/: ai_education_sales_data.tmpl  real_estate_sales_data.tmpl
static/: aisay.css
