[tool.poetry]
name = "aisay"
version = "0.1.0"
description = ""
authors = ["zhongchao <735018963@qq.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
langchain-experimental = "^0.0.57"
langchain-openai = "^0.1.3"
gradio = "^4.26.0"
faiss-cpu = "^1.8.0"
python-dotenv = "^1.0.1"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
